<resources>
    <string name="app_name">엄빠도 어렸다</string>
    <string name="app_name_dev">개발용 엄빠도 어렸다</string>
    <string name="binding_error">바인딩 에러</string>
    <string name="btn_next">다음으로</string>
    <string name="invite_code_hint">ex) ORWO-11yzwx</string>
    <string name="invite_code_title">초대코드를 입력해줘</string>
    <string name="invalid_invite_code">유효하지 않은 초대코드 입니다.</string>
    <string name="app_title">엄빠도 어렸다</string>
    <string name="app_description">처음부터 다시 나누는 이야기</string>
    <string name="kakao_login">카카오로 로그인</string>
    <string name="btn_start">시작하기</string>
    <string name="or">----------------- or ----------------</string>
    <string name="did_you_receive_code">초대 코드를 받고 왔어요</string>
    <string name="btn_start_code">초대코드로 시작하기</string>
    <string name="please_introduce_user">반가워!\n너에 대해 알고 싶어</string>
    <string name="what_is_your_name">너를 어떻게 부르면 될까?</string>
    <string name="what_is_your_sex">너의 성별을 알려줘!</string>
    <string name="man">남자</string>
    <string name="woman">여자</string>
    <string name="please_input_name">ex) 홍길동</string>
    <string name="when_is_your_birth_year">태어난 연도는 언제야?</string>
    <string name="please_input_birth_year">ex) 1988</string>
    <string name="input_error">*형식이 올바르지 않습니다.</string>
    <string name="input_error_max_seven">*7글자 이하로 작성해주세요.</string>
    <string name="input_error_limit_four">*4글자로 작성해주세요.</string>
    <string name="input_code_error">*올바른 초대코드 형식이 아닙니다.</string>
    <string name="travel_to_timemachine">오늘부터 매일,\n과거로 시간여행을 떠날 거야</string>
    <string name="who_want_travel">누구와 떠날래?</string>
    <string name="parent">부모님</string>
    <string name="child">자식</string>
    <string name="son">아들</string>
    <string name="daughter">딸</string>
    <string name="please_more_detail">더 자세히 알려줄 수 있어?</string>
    <string name="mom">엄마</string>
    <string name="dad">아빠</string>
    <string name="every_day_send_push">매일 너에게\n교신을 보내줄게</string>
    <string name="send_push_description">선택한 시간에 따라 푸시 알림을 보내드려요</string>
    <string name="fail_information_post">정보 등록에 실패했습니다.</string>
    <string name="timemachine_description">오늘부터 과거로 시간 여행을 떠날 거야</string>
    <string name="time_description">초대자가 선택한 시간에 따라 푸시 알림을 보내드려요</string>
    <string name="go_past">과거로 떠나기</string>
    <string name="go_past_title">매일 밤 11시에\n교신을 보내줄게</string>
    <string name="allow_notification">알림 권한이 허용되었습니다.</string>
    <string name="not_allow_notification">알림 권한이 없습니다.</string>
    <string name="allowing_notification">알림 권한이 허용되어 있습니다.</string>
    <string name="if_allow_notification">알림 권한을 설정하면 답변 작성 요청 알림을 받아볼 수 있습니다.</string>
    <string name="dawn">새벽</string>
    <string name="morning">아침</string>
    <string name="day">낮</string>
    <string name="evening">저녁</string>
    <string name="night">밤</string>
    <string name="everyday_notification">매일 %s %d시에\n교신을 보내줄게</string>
    <string name="everyday_notification_half">매일 %s %d시 반에\n교신을 보내줄게</string>
    <string name="setting_noti">설정에서 알림을 설정하세요.</string>
    <string name="quest_progressbar_comment">거의 다 왔어! 조금만 힘내줘!</string>
    <string name="quest_activity_title">간단한 질문에\n답해줘</string>
    <string name="quest_sub_title">해당 답변은 추후 제공될 질문을 구성하는 데 이용돼요</string>
    <string name="setting">설정</string>
    <string name="setting_notification">알람 설정</string>
    <string name="setting_about_umbba">About 엄빠도 어렸다</string>
    <string name="setting_tos">이용약관</string>
    <string name="setting_privacy_notice">개인정보 처리방침</string>
    <string name="notion_about_umbba">https://kenna432.softr.app</string>
    <string name="notion_tos">https://harsh-step-7dd.notion.site/f1a14bf60ed4421f9b3761ef88906adb</string>
    <string name="notion_privacy_notice">https://harsh-step-7dd.notion.site/99fe0f58825d4f87bd3b987fadc623b6?pvs=4</string>
    <string name="answer_edittext_hint">답변을 입력해 주세요</string>
    <string name="answer_title">#1 가장 오래된 기억</string>
    <string name="answer_question">할머니와 엄마의 꿈이 달랐어?</string>
    <string name="btn_question_answer">답변하기</string>
    <string name="question_answer_from_mom">엄마가.</string>
    <string name="question_answer_from_me">아들이.</string>
    <string name="question_answer_parent_question">할머니와 엄마의 꿈은 달랐어?</string>
    <string name="question_answer_quesiton_me">당신과 어머니의 꿈은 달라?</string>
    <string name="content_example">sdlkfjslkdjfklsdjfksdf\nsldkfjsldkjflksdjf</string>
    <string name="home_question_answer">질문 확인하기</string>
    <string name="answer_me_hint">하단 버튼을 눌러 답변을 입력하세요</string>
    <string name="answer_opponent_hint">아래 질문에 답하고 내용을 확인하세요</string>
    <string name="answer_only_me_hint">상대방이 아직 답변하지 않았어요</string>
    <string name="home">홈으로</string>
    <string name="not_redo">변경한 질문은 되돌릴 수 없어요.</string>
    <string name="not_any_question">남은 질문이 존재하지 않아요.</string>
    <string name="not_refresh">새로고침을 할 수 없어요.</string>
    <string name="not_have_partner">상대를 초대할 차례야\n상대방이 수락하면 문답이 시작돼</string>
    <string name="copy_invite_code">초대코드 복사</string>
    <string name="send_invitation">초대장 보내기</string>
    <string name="copy_invite_code_snackbar">초대 코드가 복사되었습니다.</string>
    <string name="message_title">\'%s\'으로부터 초대가 왔어요💌\n\n당신의 가장 오래된 기억이 무엇인가요?\n과거로 떠나 함께 추억을 나누고, 공감대를 형성해보세요.\n\n어플 설치 후 하단의 초대코드를 입력해, 상대방과 연결하세요.\n\n초대코드 : %s\n\n%s</string>
    <string name="save_answer">답변을 저장하시겠어요?\n저장 후에는 수정이 불가능해요</string>
    <string name="back">돌아가기</string>
    <string name="save">저장</string>
    <string name="post_answer">답변이 전송되었습니다.</string>
    <string name="list">리스트</string>
    <string name="question_number">#%d</string>
    <string name="list_section1"># 어린시절</string>
    <string name="list_section2"># 학창시절</string>
    <string name="list_section3"># 청춘시절</string>
    <string name="list_section4"># 연애시절</string>
    <string name="list_section5"># 우리가 만나고</string>
    <string name="back_confirm">답변 작성을 취소하시겠어요?\n작성 중인 답변은 저장되지 않아요</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="delete_account_life_quotes">\"추억은 일종의 만남이다.\"</string>
    <string name="delete_account_life_quotes_people">- 칼릴 지브란 -</string>
    <string name="delete_account_title">회원탈퇴를 진행하시겠습니까?</string>
    <string name="delete_account_content">작성한 모든 문답 내역이 삭제되며 상대측에게는 더 이상 알림이 가지 않습니다.삭제한 내역은 복구할 수 없으니 신중하게 선택해주세요.</string>
    <string name="btn_delete_account">탈퇴하기</string>
    <string name="logout">로그아웃</string>
    <string name="delete_account">회원 탈퇴</string>
    <string name="manage_account">계정 관리</string>
    <string name="delete_account_dialog">정말 회원을 탈퇴하시겠습니까?</string>
    <string name="no_opponenet_text">상대와의 연결이 끊겼어요</string>
    <string name="no_opponenet_coment">새로운 상대와 함께 하려면\n회원 탈퇴 후 이용해주세요</string>
    <string name="arrive_past">과거에 도착했어!\n앞으로 나눌 이야기가 많을 거야</string>
    <string name="all_agree">전체 동의하기</string>
    <string name="all_agree_description">본인은 만 14세 이상이며, 엄빠도 어렸다 서비스 이용약관, 개인정보 수집 및 이용에 모두 동의합니다.</string>
    <string name="up_14">[필수] 만 14세 이상입니다.</string>
    <string name="up_14_description">엄빠도 어렸다 서비스를 이용하기 위해서는 만 14세 이상이 되어야 합니다. 만 14세 미만의 이용자의 경우 서비스 이용이 제한됩니다.</string>
    <string name="agree_terms_and_condition">[필수] 서비스 이용약관에 동의합니다.</string>
    <string name="agree_privacy">[필수] 개인정보 수집 및 이용에 동의합니다.</string>
    <string name="agree_privacy_description">\'ub company\'(이하 \'회사\')가 운영하는 \'엄빠도 어렸다\'는 개인정보보호법 제30조 의거 이용자의 개인정보보호와 권익을 보호하고 관련된 고충 및 애로사항을 신속하게 처리하기 위해 아래의 개인정보처리방침을 제정·운영하고 있습니다.</string>
    <string name="terms_and_condition">서비스 이용약관</string>
    <string name="privacy">개인정보 수집 및 이용</string>
    <string name="answer_phone">전화 받기</string>
    <string name="call_description">오래된 공중전화에서 수신음이 들린다</string>
    <string name="main_topic">#%d %s</string>
    <string name="section1">어린시절</string>
    <string name="section2">학창시절</string>
    <string name="section3">청춘시절</string>
    <string name="section4">연애시절</string>
    <string name="yes">응</string>
    <string name="no">아니</string>
    <string name="ambiguous">애매해</string>
    <string name="quest_1">지금 가족과 함께 살고 있어?</string>
    <string name="quest_2">고등학교를 졸업했어?</string>
    <string name="quest_3">결혼을 꼭 해야 한다고 생각해?</string>
    <string name="quest_4">뭔가를 크게 포기해본 경험이 있어?</string>
    <string name="quest_5">돌아가고 싶은 순간이 있어?</string>
    <string name="ending_title">지금까지의 여정이 어땠는지\n알려줘</string>
    <string name="ending_survey_title">설문에 참여하고, 다시 문답을 이어가자</string>
    <string name="ending_survey_caption">설문조사에 참여하여 피드백을 남겨주세요.</string>
    <string name="ending_btn_survey">설문하러 가기</string>
    <string name="ending_close_page"><u>건너뛰기</u></string>
    <string name="ending_survey_uri">https://walla.my/umbba</string>
    <string name="not_question">남은 질문이 없습니다. 질문을 추가해주세요.</string>
    <string name="communication">오래된 공중전화에서 수신음이 들린다</string>
    <string name="update_content">부모와 자식이 함께 떠나는 시간여행,\n엄빠도 어렸다가 개선되었어요\n더 나은 서비스를 즐겨보세요</string>
    <string name="btn_update">업데이트 하기</string>
    <string name="update_title">새로운 버전이 업데이트 되었어요</string>
    <string name="now">지금은</string>
    <string name="travel">여행을 떠난 지</string>
    <string name="answer">나눈 문답 수</string>
    <string name="getclose">가까워지기</string>
    <string name="getclose_description">서로를 알아가는 밸런스게임</string>
    <string name="record">기록하기</string>
    <string name="record_description">소중한 순간을 기록하는 사진첩</string>
    <string name="umbba_version">ub company 2024 ver 1.2.0 All Right Reserved</string>
    <string name="tv_me">나</string>
    <string name="other_not_connect">상대 미연결</string>
    <string name="days">%d일 째</string>
    <string name="numbers">%d 개</string>
    <string name="get_closer_my_choice">나의 선택</string>
    <string name="get_closer_other_choice">상대방의 선택</string>
    <string name="get_closer_result_same">우리는 통했어요</string>
    <string name="get_closer_result_diff">선택이 엇갈렸어요</string>
    <string name="get_closer_check_result">결과 확인</string>
    <string name="record_upload_title">사진으로 추억을 기록해요</string>
    <string name="record_upload_description">간단한 설명과 함께 사진을 업로드하세요</string>
    <string name="allow_gallery">갤러리 접근 권한이 허용되어 있습니다.</string>
    <string name="not_allow_gallery">갤러리에 접근할 권한이 없습니다.</string>
    <string name="need_permission">권한이 필요합니다.</string>
    <string name="need_permission_description">앱에서 사진을 불러오기 위해 권한이 필요합니다.</string>
    <string name="agree">동의</string>
    <string name="title">제목</string>
    <string name="title_record_description">사진의 제목을 작성해주세요</string>
    <string name="introduce">소개</string>
    <string name="introduce_record_description">사진에 대해 소개해주세요</string>
    <string name="upload">등록하기</string>
    <string name="input_error_max_fifteen">*최대 15자까지 입력 가능합니다.</string>
    <string name="back_record_confirm">작성을 취소하시겠어요?\n작성 중인 글은 저장되지 않아요</string>
    <string name="delete_record_confirm">정말 기록을 삭제하시겠어요?</string>
    <string name="delete">삭제</string>
    <string name="do_you_change_question">질문을 변경하시겠어요?</string>
    <string name="new_question">새로운 질문</string>
    <string name="not_change_question_if_you_change">변경한 질문은 되돌릴 수 없어요</string>
    <string name="change_question">질문 변경하기</string>
</resources>