<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_500"
        tools:context=".presentation.login.AgreePrivacyUseActivity">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_umbba_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_title"
            style="@style/BrandTypeBigRegular20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/app_title"
            android:textColor="@color/primary_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <TextView
            android:id="@+id/tv_app_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/app_description"
            android:textAppearance="@style/AndroidBody2_2Regular12"
            android:textColor="@color/primary_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_title" />

        <ImageView
            android:id="@+id/iv_line1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="88dp"
            android:src="@drawable/shape_grey_line_1dp_rect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_description" />

        <TextView
            android:id="@+id/tv_all_agree"
            style="@style/AndroidBody1_1SemiBold16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="48dp"
            android:text="@string/all_agree"
            android:textColor="@color/umbba_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_line1" />

        <ImageView
            android:id="@+id/btn_all_agree_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="28dp"
            android:clickable="true"
            android:src="@drawable/sel_btn_agree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_line1" />

        <TextView
            android:id="@+id/tv_all_agree_description"
            style="@style/AndroidBody2_2Regular12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:text="@string/all_agree_description"
            android:textColor="@color/grey_800"
            app:layout_constraintEnd_toStartOf="@id/btn_all_agree_check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_all_agree" />

        <TextView
            android:id="@+id/tv_up_14"
            style="@style/AndroidBody2_2Regular12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="29dp"
            android:text="@string/up_14"
            android:textColor="@color/umbba_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_all_agree_description" />

        <ImageView
            android:id="@+id/btn_up_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="28dp"
            android:clickable="true"
            android:src="@drawable/sel_btn_agree_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_all_agree_description" />

        <TextView
            android:id="@+id/tv_up_14_description"
            style="@style/AndroidCaptionRegular10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="7dp"
            android:text="@string/up_14_description"
            android:textColor="@color/grey_800"
            app:layout_constraintEnd_toStartOf="@+id/btn_up_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_up_14" />

        <TextView
            android:id="@+id/tv_agree_terms_and_condition"
            style="@style/AndroidBody2_2Regular12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="29dp"
            android:text="@string/agree_terms_and_condition"
            android:textColor="@color/umbba_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_up_14_description" />

        <ImageView
            android:id="@+id/btn_agree_terms_and_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="28dp"
            android:clickable="true"
            android:src="@drawable/sel_btn_agree_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_up_14_description" />

        <TextView
            android:id="@+id/tv_agree_privacy"
            style="@style/AndroidBody2_2Regular12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="34dp"
            android:text="@string/agree_privacy"
            android:textColor="@color/umbba_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_agree_terms_and_condition" />

        <ImageView
            android:id="@+id/btn_agree_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="28dp"
            android:clickable="true"
            android:src="@drawable/sel_btn_agree_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_agree_terms_and_condition" />

        <TextView
            android:id="@+id/tv_agree_privacy_description"
            style="@style/AndroidCaptionRegular10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="7dp"
            android:text="@string/agree_privacy_description"
            android:textColor="@color/grey_800"
            app:layout_constraintEnd_toStartOf="@id/btn_agree_privacy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_agree_privacy" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            style="@style/AndroidBody1_1SemiBold16"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="21dp"
            android:layout_marginVertical="24dp"
            android:background="@drawable/sel_btn_next_agree"
            android:enabled="false"
            android:stateListAnimator="@null"
            android:text="@string/btn_next"
            android:textColor="@color/sel_btn_pri500_text"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>