<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="titleText"
            type="String" />

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="viewmodel"
            type="com.sopt.umbba_android.presentation.viewmodel.SelectFamilyViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/umbba_white"
        tools:context=".presentation.onboarding.SelectFamilyActivity">

        <include
            android:id="@+id/layout_appbar"
            layout="@layout/basic_appbar"
            app:clickListener="@{clickListener}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_travel_to_timemachine"
            style="@style/AndroidHead1SemiBold24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            android:text="@string/travel_to_timemachine"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_appbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_family"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_g400_stroke_r8_rect"
            app:layout_constraintTop_toBottomOf="@id/tv_travel_to_timemachine">

            <TextView
                android:id="@+id/tv_family"
                style="@style/AndroidSubHead1SemiBold20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/who_want_travel"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_family"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                app:chipSpacingHorizontal="13dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_family"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_1"
                    style="@style/ChoiceChipStyle"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:checked="@={viewmodel.parent}"
                    android:text="@string/parent"
                    app:chipMinHeight="52dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_2"
                    style="@style/ChoiceChipStyle"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:checked="@={viewmodel.child}"
                    android:text="@string/child"
                    app:chipMinHeight="52dp" />
            </com.google.android.material.chip.ChipGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_g400_stroke_r8_rect"
            app:layout_constraintTop_toBottomOf="@id/cl_family"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_more"
                style="@style/AndroidSubHead1SemiBold20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/please_more_detail"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                app:chipSpacingHorizontal="13dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_more"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_3"
                    style="@style/ChoiceChipStyle"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:checked="@={viewmodel.mom}"
                    android:text="@string/mom"
                    app:chipMinHeight="52dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_4"
                    style="@style/ChoiceChipStyle"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:checked="@={viewmodel.dad}"
                    android:text="@string/dad"
                    app:chipMinHeight="52dp" />
            </com.google.android.material.chip.ChipGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            style="@style/AndroidBody1_1SemiBold16"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="24dp"
            android:background="@drawable/sel_btn_next"
            android:enabled="false"
            android:stateListAnimator="@null"
            android:text="@string/btn_next"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>