<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="21dp"
        tools:context=".presentation.onboarding.InviteActivity">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_description"
            style="@style/AndroidHead2Regular24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="16dp"
            android:text="@string/app_description"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_start"
            style="@style/AndroidBody3Bold16"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/sel_invite_code_btn_next"
            android:enabled="true"
            android:text="@string/btn_start"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/tv_or" />

        <TextView
            android:id="@+id/tv_or"
            style="@style/AndroidBody2_2Regular16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/or"
            android:textColor="@color/grey_or"
            app:layout_constraintBottom_toTopOf="@id/tv_receive_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_receive_code"
            style="@style/AndroidBody2_2Regular16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/did_you_receive_code"
            app:layout_constraintBottom_toTopOf="@id/btn_input_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_input_code"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginVertical="24dp"
            android:background="@drawable/shape_grey_btn_r50_rectangle"
            android:enabled="false"
            android:text="@string/btn_input_code"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>