<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inset_dialog_background">

        <TextView
            android:id="@+id/tv_confirm"
            style="@style/AndroidBody1_2Regular16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:gravity="center"
            android:text="@string/back_confirm"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="33dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="23dp"
            app:layout_constraintTop_toBottomOf="@id/tv_confirm"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                style="@style/AndroidBody1_2Regular16"
                android:layout_width="124dp"
                android:layout_height="48dp"
                android:background="@drawable/shape_grey_btn_r50_stroke_rect"
                android:text="@string/cancel"
                android:textColor="@color/grey_btn_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                style="@style/AndroidBody1_2Regular16"
                android:layout_width="124dp"
                android:layout_height="48dp"
                android:layout_marginStart="13dp"
                android:background="@drawable/shape_grey74_btn_r50_rect"
                android:text="@string/confirm"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/btn_cancel"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>